fix(relations): handle overflow in relations dialog
When the form to add new relations runs longer the dialog height,
all its fields and the submit button must still be accessible.
This change handles the overflow separately for the x an y axis,
making the y-axis scrollable.

--- a/apis_core/relations/static/css/relations.css
+++ b/apis_core/relations/static/css/relations.css
@@ -6,7 +6,8 @@
 #relationdialog {
     border: 1px solid black;
     border-radius: .3rem;
-    overflow: visible;
+    overflow-x: visible;
+    overflow-y: scroll;
     padding: 0;
     opacity: 1;
     transform: scale(1);
